[gd_scene load_steps=9 format=3 uid="uid://cwrd5jnbqr51v"]

[ext_resource type="PackedScene" uid="uid://orrylwy00mj5" path="res://scenes/characters/character.tscn" id="1_ge8kd"]
[ext_resource type="Script" path="res://scenes/characters/sniper.gd" id="2_10kv6"]
[ext_resource type="Texture2D" uid="uid://x5104nlwg6r5" path="res://resources/images/weapons/sniper_rifle.svg" id="2_tydmc"]
[ext_resource type="PackedScene" uid="uid://dwt7s2pmjupnb" path="res://scenes/characters/ai/movement_ai.tscn" id="3_nji3q"]
[ext_resource type="PackedScene" uid="uid://meqegj8png7j" path="res://scenes/projectiles/projectile_launcher.tscn" id="4_084aj"]
[ext_resource type="PackedScene" uid="uid://pm6nli32m56x" path="res://scenes/projectiles/sniper_bullet.tscn" id="5_3ge4c"]
[ext_resource type="AudioStream" uid="uid://ci3lea42gtfnc" path="res://resources/audio/characters/weapons/sniper_gun.wav" id="6_s23lu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lxc2b"]
radius = 8.0

[node name="Sniper" instance=ExtResource("1_ge8kd")]
script = ExtResource("2_10kv6")

[node name="Hurtbox" parent="." index="0"]
health = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_lxc2b")

[node name="SniperRifle" type="Sprite2D" parent="CharacterSprite" index="3"]
position = Vector2(15.75, 2.06)
scale = Vector2(0.275, 0.275)
texture = ExtResource("2_tydmc")

[node name="ProjectileLauncher" parent="CharacterSprite/SniperRifle" index="0" node_paths=PackedStringArray("character") instance=ExtResource("4_084aj")]
unique_name_in_owner = true
position = Vector2(58.1818, -18.1818)
scale = Vector2(3.63636, 3.63636)
character = NodePath("../../..")
projectile_scene = ExtResource("5_3ge4c")
audio = ExtResource("6_s23lu")
volume_db = -2.0

[node name="MovementAI" parent="." index="3" node_paths=PackedStringArray("character") instance=ExtResource("3_nji3q")]
target_distance_min = 48.0
target_distance_max = 384.0
move_speed_multiple = 0.8
attack_wait = 3.0
attacking_speed_multiple = 0.1
character = NodePath("..")

[connection signal="attack" from="MovementAI" to="." method="_on_movement_ai_attack"]
